[package]
name = "cvmfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-certificate = "0.18"
thiserror = "1.0"
sha1 = "0.10"
md5 = "0.7.0"
base16ct = "0.1"
chrono = "0.4"
faccess = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3"
compress = "0.2"
rusqlite = "0.28"
hex = "0.4"
fuse_mt = "0.6"