[package]
name = "cvmfs"
version = "0.1.0"
description = "CernVM-FS client implementation in Rust"
authors = ["José Molina <jmolinacolmenero@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
x509-certificate = "0.24.0"
thiserror = "2.0.3"
sha1 = "0.10"
md5 = "0.7.0"
chrono = "0.4"
reqwest = { version = "0.12.9", features = ["blocking"] }
compress = "0.2"
rusqlite = { version = "0.32.1", features = ["blob"] }
hex = "0.4"
fuse_mt = "0.6"
libc = "0.2"
rand = "0.8"
log = "0.4.22"
